hphp/hack/test/typecheck/immutable_binding/immutable_foreach_mutation.php.exp
File "immutable_foreach_mutation.php", line 6, characters 5-5:
Invalid lvalue (Parsing[1002])
